corrected display size on mobile

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -19,6 +19,9 @@ body {
   font-family: "Russo One", sans-serif;
   display: flex;
   flex-direction: column;
+  align-items: stretch;
+  font-weight: normal;
+  height: 100vh;
 }
 
 .nav {
@@ -27,14 +30,12 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  height: 10vh;
+  justify-content: space-evenly;
+  height: 4rem;
 }
 
 .navTitle {
-  margin-top: 0.4rem;
-  font-size: 2rem;
-  font-weight: normal;
+  font-size: 1rem;
 }
 
 .links {
@@ -43,8 +44,8 @@ body {
 }
 
 .nav-link {
-  margin: 0 1.6rem;
-  font-size: 1.4rem;
+  font-size: 1rem;
+  margin: 0 1rem;
 }
 
 a:link,
@@ -57,30 +58,29 @@ a:active {
 
 .main {
   color: var(--lightGreen);
-  height: 80vh;
   background-image: url("../images/jr-korpa-_OQ8Jc7kBmA-unsplash.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  height: calc(100vh - 8rem);
 }
 
 .footer {
-  height: 10vh;
   background-color: var(--gray);
   color: var(--mid);
+  height: 4rem;
 }
 
 .footer .social {
   display: flex;
-  justify-content: space-evenly;
-  align-items: center;
+  justify-content: center;
   list-style: none;
 }
 
 .footer .social .fab,
 .footer .social .fas {
-  font-size: 8vh;
-  padding: 0.4rem;
+  font-size: 3rem;
+  margin: 0.5rem 0.6rem;
 }
 
 @media only screen and (min-width: 800px) {
@@ -88,6 +88,14 @@ a:active {
     flex-direction: row;
     justify-content: space-between;
     padding: 0 2rem;
+  }
+
+  .navTitle {
+    font-size: 2rem;
+  }
+
+  .nav-link {
+    font-size: 2rem;
   }
 
   .footer .social {
